# hoox

./: .hoox.toml  .hoox.yaml  .neomake.yaml  Cargo.toml  build.rs  release.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
docs/: README.md
res/templates/: rust.yaml
src/: args.rs  commands.rs  lib.rs  main.rs  reference.rs  schema.rs
