[package]
name = "hoox"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2021"
license = "MIT"
description = "Git hooks on steroids."
homepage = "https://github.com/replicadse/hoox"
repository = "https://github.com/replicadse/hoox"
keywords = ["hoox"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[[bin]]
name = "hoox"
path = "./src/main.rs"

[features]
default = []

[dependencies]
async-trait = "0.1.72"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.3.19"
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
clap-markdown = "0.1.3"
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.34"
anyhow = "1.0.86"
version-compare = "0.2.0"

[build-dependencies]
async-trait = "0.1.72"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.34"
anyhow = "1.0.86"
ci_info = "0.14.14"
version-compare = "0.2.0"
