[package]
name = "hoox"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2021"
license = "MIT"
description = "Git hooks on steroids."
homepage = "https://github.com/replicadse/hoox"
repository = "https://github.com/replicadse/hoox"
keywords = ["hoox"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[[bin]]
name = "hoox"
path = "./src/main.rs"

[features]
default = []

[dependencies]
async-trait = "0.1.81"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.5.14"
clap_complete = "4.5.13"
clap_mangen = "0.2.23"
clap-markdown = "0.1.4"
serde = { version = "1.0.206", features = ["derive"] }
serde_yaml = "0.9.34"
anyhow = "1.0.86"
version-compare = "0.2.0"

[build-dependencies]
async-trait = "0.1.81"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.206", features = ["derive"] }
serde_yaml = "0.9.34"
anyhow = "1.0.86"
ci_info = "0.14.14"
version-compare = "0.2.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
